feat: aggiungi testi esercizi

--- a/problems/ex1.tex
+++ b/problems/ex1.tex
@@ -3,9 +3,12 @@
 \begin{esercizio}{Il Concetto di Campionamento}
     Dato il segnale tempo-continuo:
     \[
-        x(t) = 2t + 1, \quad \text{per } t \ge 0
+        x(t) = 4t - 2
     \]
-    Si campioni il segnale con un intervallo di campionamento $T = 0.5$ secondi.
+    Questo segnale viene campionato con un intervallo di campionamento $T = 0.25$ secondi, ottenendo la sequenza tempo-discreto $x[n]$.
     
-    Scrivere l'espressione della sequenza tempo-discreto $x[n]$ e calcolare il valore dei primi 5 campioni (da $n=0$ a $n=4$).
+    \begin{enumerate}
+        \item Scrivere l'espressione analitica della sequenza $x[n]$.
+        \item Calcolare il valore dei primi 5 campioni (per $n = 0, 1, 2, 3, 4$).
+    \end{enumerate}
 \end{esercizio}
