feat: aggiungi soluzioni

--- a/preamble.tex
+++ b/preamble.tex
@@ -27,6 +27,8 @@
 % --- Pacchetti per la strutturazione del documento ---
 % pgffor ci permette di usare il comodo ciclo \foreach in main.tex
 \usepackage{pgffor} 
+\usepackage{pgfplots}
+\pgfplotsset{compat=1.18} % O la versione che stai usando
 
 % --- Collegamenti ipertestuali ---
 \usepackage{hyperref}
