--- a/solutions/ex1.tex
+++ b/solutions/ex1.tex
@@ -1,19 +1,34 @@
 % File: solutions/ex1.tex
 
 \begin{soluzione}{1}
-    La relazione tra il segnale continuo e la sequenza campionata è $x[n] = x(nT)$.
-    Sostituendo l'espressione di $x(t)$ e $T=0.5s$:
-    \[
-        x[n] = x(n \cdot 0.5) = 2(0.5n) + 1 = n + 1
-    \]
-    Questa espressione è valida per $n \ge 0$.
-    
-    Calcoliamo i primi 5 campioni:
-    \begin{itemize}
-        \item $x[0] = 0 + 1 = 1$
-        \item $x[1] = 1 + 1 = 2$
-        \item $x[2] = 2 + 1 = 3$
-        \item $x[3] = 3 + 1 = 4$
-        \item $x[4] = 4 + 1 = 5$
-    \end{itemize}
+    \begin{enumerate}
+        \item \textbf{Espressione analitica della sequenza:}
+        
+        Per ottenere l'espressione della sequenza tempo-discreto $x[n]$ a partire dal segnale tempo-continuo $x(t)$, si deve valutare $x(t)$ negli istanti di campionamento $t = nT$.
+        
+        La relazione fondamentale è:
+        \[
+            x[n] = x(nT)
+        \]
+        Con i dati del problema, abbiamo $x(t) = 4t - 2$ e $T = 0.25$ s. Sostituendo:
+        \[
+            x[n] = 4(n \cdot T) - 2 = 4(n \cdot 0.25) - 2
+        \]
+        Semplificando il prodotto $4 \cdot 0.25 = 1$, si ottiene l'espressione finale per la sequenza:
+        \[
+            \mathbf{x[n] = n - 2}
+        \]
+        
+        \item \textbf{Calcolo dei primi 5 campioni:}
+        
+        Ora utilizziamo l'espressione appena trovata, $x[n] = n - 2$, per calcolare i valori della sequenza per gli indici $n = 0, 1, 2, 3, 4$.
+        \begin{itemize}
+            \item Per $n=0: \quad x[0] = 0 - 2 = \mathbf{-2}$
+            \item Per $n=1: \quad x[1] = 1 - 2 = \mathbf{-1}$
+            \item Per $n=2: \quad x[2] = 2 - 2 = \mathbf{0}$
+            \item Per $n=3: \quad x[3] = 3 - 2 = \mathbf{1}$
+            \item Per $n=4: \quad x[4] = 4 - 2 = \mathbf{2}$
+        \end{itemize}
+        La sequenza dei primi campioni è quindi $\{-2, -1, 0, 1, 2, \dots\}$.
+    \end{enumerate}
 \end{soluzione}
