--- a/preamble.tex
+++ b/preamble.tex
@@ -1,3 +1,4 @@
+% File: preamble.tex
 % --- Codifica e Lingua ---
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -18,6 +19,7 @@
 % --- Intestazioni e Piè di pagina ---
 \usepackage{fancyhdr}
 \pagestyle{fancy}
+\setlength{\headheight}{14pt} % Aumentato per risolvere il warning
 \fancyhf{} % Pulisce tutte le intestazioni e i piè di pagina
 \fancyhead[L]{Corso di Preparazione - Segnali per le Comunicazioni}
 \fancyfoot[C]{\thepage}
