--- a/preamble.tex
+++ b/preamble.tex
@@ -64,5 +64,5 @@
 
 % Ambiente riquadrato per le soluzioni
 \newenvironment{soluzione}[1]
-  {\begin{soluzioneinner}[#1]\begin{framed}}
-  {\end{framed}\end{soluzioneinner}}
+  {\begin{framed}\begin{soluzioneinner}[#1]}
+  {\end{soluzioneinner}\end{framed}}
